# Qt_CI-CD

./: CMakeLists.txt  Main.qml  README.md  installer.nsi  main.cpp
.github/workflows/: cmake-multi-platform.yml  windows-build.yml
deploy/: app.desktop
installer/: installer.nsi
